--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -65,79 +65,77 @@
         slidingLayer:previewOffsetDistance="100dp"
         slidingLayer:shadowSize="@dimen/shadow_size">
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/show_head"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:background="@color/slidinglayer_background"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="4">
 
                 <LinearLayout
-                    android:id="@+id/show_head"
-                    android:layout_width="match_parent"                    
-                    android:background="@color/slidinglayer_background"
-                    android:layout_height="wrap_content"                    
-                    android:orientation="horizontal"
-                    android:weightSum="4">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_weight="3"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/show_type"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textSize="18dp" />
-
-                        <TextView
-                            android:id="@+id/show_title"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:lines="1"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textSize="24dp" />
-
-                    </LinearLayout>
-
-                    <ImageView
-                        android:id="@+id/show_type_image"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1" />
-
-                </LinearLayout>
-
-                <LinearLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#FFFFFF">
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="3"
+                    android:orientation="vertical">
 
-                    <View
-                        android:id="@+id/separator1"
+                    <TextView
+                        android:id="@+id/show_title"
                         android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="#90909090" />
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:lines="1"
+                        style="@style/Title" />
+
+                    <TextView
+                        android:id="@+id/show_date_added"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/Caption" />
 
                 </LinearLayout>
 
-                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/details_scrollview"
+                <ImageView
+                    android:id="@+id/show_type_image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF">
+
+                <View
+                    android:id="@+id/separator1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true"
-                    android:measureAllChildren="true">
+                    android:layout_height="1px"
+                    android:background="#90909090" />
+
+            </LinearLayout>
+
+            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/details_scrollview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                android:measureAllChildren="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -147,7 +145,7 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="16dp"
                     android:orientation="vertical"
-                    android:background="#FFFFFF" >
+                    android:background="#FFFFFF">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -208,45 +206,29 @@
 
                     <TextView
                         android:id="@+id/textView2"
+                        style="@style/Subhead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/string_description"
-                        android:textStyle="bold"
-                        android:layout_marginTop="32dp" />
+                        android:text="@string/string_description" />
 
                     <TextView
                         android:id="@+id/show_content"
+                        style="@style/Body2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"/>
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp"
-                        android:textStyle="bold"
-                        android:text="@string/string_suggested_solution" />
+                        style="@style/Subhead"
+                        android:text="@string/string_suggested_solution"/>
 
                     <TextView
                         android:id="@+id/show_proposal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp"
-                        android:textStyle="bold"
-                        android:text="@string/string_added_by" />
-
-                    <TextView
-                        android:id="@+id/show_date_added"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp" />
+                        style="@style/Body2"/>
 
                     <org.ecomap.android.app.widget.ExpandableHeightGridView
                         android:id="@+id/gridview"
@@ -272,9 +254,9 @@
 
                 </LinearLayout>
 
-                </ScrollView>
+            </ScrollView>
 
-            </LinearLayout>
+        </LinearLayout>
 
 
     </com.wunderlist.slidinglayer.SlidingLayer>
