--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -34,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
+                    android:ems="10"
                     android:singleLine="true"
                     android:hint="@string/add_problem_title"/>
 
