--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,7 +5,7 @@
 
         <item
             android:id="@+id/map"
-            android:checked="false"
+            android:checked="true"
             android:icon="@drawable/ic_map"
             android:title="@string/item_map" />
 
