--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@color/white"
+    android:id="@+id/addProblem"
     >
 
     <LinearLayout
@@ -102,12 +103,23 @@
 
         </LinearLayout>
 
+        <com.google.android.gms.maps.MapView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/littleMap"
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            map:mapType="normal"
+            map:liteMode="true"/>
+
         <FrameLayout
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:orientation="horizontal"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:background="@drawable/dotted_border" >
 
             <Button
@@ -125,28 +137,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="right">
-
+            android:layout_gravity="right"
+            android:layout_marginTop="16dp">
+<!--
             <Button
                 android:id="@+id/cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
-                android:textColor="#ff0099cc"
+                android:background="@color/white"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/send_problem"
                 android:layout_toStartOf="@+id/send_problem"
-                style="?android:attr/borderlessButtonStyle" />
-
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp" />
+-->
             <Button
                 android:id="@+id/send_problem"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/send"
-                android:textColor="#ff0099cc"
+                android:textColor="@color/white"
+                android:background="@color/blue3"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                style="?android:attr/borderlessButtonStyle" />
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp" />
 
         </RelativeLayout>
     </LinearLayout>
