--- a/app/src/main/res/layout/activity_static_pages.xml
+++ b/app/src/main/res/layout/activity_static_pages.xml
@@ -3,10 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-
-    <WebView
-        android:id="@+id/static_pages_item_content"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        >
+        <TextView
+            android:id="@+id/static_pages_item_title_inside"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
+            android:textSize="18sp"
+            android:gravity="center_horizontal"/>
+        <WebView
+            android:layout_below="@+id/static_pages_item_title_inside"
+            android:id="@+id/static_pages_item_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
+    </RelativeLayout>
 
 </ScrollView>
