--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:slidingLayer="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/ecoMap">
 
     <com.google.android.gms.maps.MapView android:id="@+id/mapview"
         android:layout_width="fill_parent"
@@ -18,8 +19,8 @@
             android:id="@+id/fabAddProblem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_white_24dp"
-            android:layout_gravity="bottom|right"
+            android:src="@drawable/ic_location_on_white_24dp"
+            android:layout_gravity="bottom|end"
             android:visibility="visible"
             app:fabSize="normal"
             android:layout_margin="16dp"
@@ -260,19 +261,5 @@
 
 
     </org.ecomap.android.app.ui.components.EcoMapSlidingLayer>
-
-    <!--<android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:scrollbars="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/tabLayout"/>-->
 
 </RelativeLayout>
