--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,11 +35,17 @@
 
     <!-- Base application theme -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/accent</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">#3D5AFE</item>
+        <item name="colorPrimary">#303F9F</item>
+        <item name="colorPrimaryDark">#283593</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:textColorHint">@color/secondary_text</item>
+    </style>
+
+    <style name="ToolbarStyle" parent="Theme.AppCompat">
+        <item name="android:actionMenuTextColor">@android:color/white</item>
+        <item name="colorPrimary">#303F9F</item>
+        <item name="colorPrimaryDark">#283593</item>
     </style>
 
     <!-- View photos activity theme -->
