--- a/app/src/main/res/layout/fragment_top10_tab.xml
+++ b/app/src/main/res/layout/fragment_top10_tab.xml
@@ -11,8 +11,7 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:background="@color/snackBarSuccess"/>
+        android:elevation="2dp"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
