--- a/app/src/main/res/layout/filters_fragment_main.xml
+++ b/app/src/main/res/layout/filters_fragment_main.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/scroll_view"
-    >
+    android:background="@color/white">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical" >
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp" >
+
+            <android.support.v7.widget.SwitchCompat
+                android:id="@+id/switch_compat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="6dp"
+                android:checked="false"
+                android:text="@string/show_only_my_problems"
+                android:textOff=""
+                android:textOn=""
+                android:textSize="18sp"
+                app:showText="true"/>
+
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -83,29 +104,26 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+                    <org.ecomap.android.app.ui.components.NonScrollableListView
+                        android:id="@id/android:list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </org.ecomap.android.app.ui.components.NonScrollableListView>
 
-    <ListView
-        android:id="@id/android:list"
-        android:layout_width="match_parent"
-        android:layout_height="350dp">
-    </ListView>
-        </LinearLayout>
+                </LinearLayout>
         </android.support.v7.widget.CardView>
 
-
-
-
-    <LinearLayout
+        <LinearLayout
 
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -125,5 +143,6 @@
 
         </Button>
         </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
