--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.Profile">
+    tools:context=".activities.Profile"
+    android:background="@color/white">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -215,12 +216,10 @@
             </android.support.v7.widget.CardView>
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="@string/logout"
                 android:id="@+id/profile_logout"
-                android:layout_gravity="center"
-                android:background="#FFFFFF"
+                android:layout_gravity="center_horizontal"
+                style="@style/FlatButton"
                 android:layout_margin="16dp" />
 
             <TextView
