--- a/app/src/main/res/layout/filters_fragment_main.xml
+++ b/app/src/main/res/layout/filters_fragment_main.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/scroll_view"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp" >
+            android:layout_margin="16dp">
 
             <android.support.v7.widget.SwitchCompat
                 android:id="@+id/switch_compat"
@@ -28,7 +27,7 @@
                 android:textOff=""
                 android:textOn=""
                 android:textSize="18sp"
-                app:showText="true"/>
+                app:showText="true" />
 
         </android.support.v7.widget.CardView>
 
@@ -36,112 +35,114 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-
-        <LinearLayout
-
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:id="@+id/line1">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:id="@+id/textView5"
-                android:text="@string/starting_date"
-                android:textColor="@color/secondary_text"
-                android:layout_margin="6dp"
-                android:gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:text="New Text"
-                android:id="@+id/start_date"
-                android:textColor="@color/primary_text"
-                android:layout_margin="6dp"
-                android:gravity="center"
-                android:onClick="onStartDateClicked"
-                android:clickable="true"/>
-            </LinearLayout>
-        <LinearLayout
-
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:text="@string/end_date"
-                android:id="@+id/textView9"
-                android:textColor="@color/secondary_text"
-                android:layout_margin="6dp"
-                android:gravity="center"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:text="New Text"
-                android:id="@+id/end_date"
-                android:textColor="@color/primary_text"
-                android:layout_margin="6dp"
-                android:gravity="center"
-                android:onClick="onEndDateClicked"
-                android:clickable="true"/>
-
-        </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp">
 
                 <LinearLayout
+
+                    android:id="@+id/line1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:gravity="start"
+                    android:orientation="horizontal">
 
-                    <org.ecomap.android.app.ui.components.NonScrollableListView
-                        android:id="@id/android:list"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </org.ecomap.android.app.ui.components.NonScrollableListView>
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:layout_margin="6dp"
+                        android:gravity="center"
+                        android:text="@string/starting_date"
+                        android:textColor="@color/secondary_text" />
+
+                    <TextView
+                        android:id="@+id/start_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:layout_margin="6dp"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:onClick="onStartDateClicked"
+                        android:text="New Text"
+                        android:textColor="@color/primary_text" />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:layout_margin="6dp"
+                        android:gravity="center"
+                        android:text="@string/end_date"
+                        android:textColor="@color/secondary_text" />
+
+                    <TextView
+                        android:id="@+id/end_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:layout_margin="6dp"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:onClick="onEndDateClicked"
+                        android:text="New Text"
+                        android:textColor="@color/primary_text" />
 
                 </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <org.ecomap.android.app.ui.components.NonScrollableListView
+                    android:id="@id/android:list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></org.ecomap.android.app.ui.components.NonScrollableListView>
+
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <LinearLayout
 
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <Button
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-             android:text="@string/reset"
-             android:id="@+id/reset">
-
-        </Button>
-        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/ok"
-            android:id="@+id/ok">
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="horizontal">
 
-        </Button>
+            <Button
+                android:id="@+id/reset"
+                style="@style/FlatButton"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:text="@string/reset" />
+
+            <Button
+                android:id="@+id/ok"
+                style="@style/RaisedButton"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:text="@string/ok" />
         </LinearLayout>
 
     </LinearLayout>
