--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:style="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -10,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context="org.ecomap.android.app.fragments.LoginFragment" >
+    tools:context="org.ecomap.android.app.fragments.LoginFragment">
 <!-- Login progress -->
 <ProgressBar
     android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
@@ -70,12 +71,12 @@
 
         <!-- LOGIN BUTTON start -->
         <Button
-            android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
+            android:id="@+id/email_sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/login"
-            android:textStyle="bold" />
+            style="@style/RaisedButton"/>
         <!-- LOGIN BUTTON end -->
 
         <!--LINK TO REGISTER start -->
