--- a/app/src/main/res/layout/comment_photos_layout.xml
+++ b/app/src/main/res/layout/comment_photos_layout.xml
@@ -26,7 +26,7 @@
             android:id="@+id/nonScrollableListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"></org.ecomap.android.app.ui.components.NonScrollableListView>
+            android:layout_marginTop="16dp"/>
 
         </LinearLayout>
 
