--- a/app/src/main/res/layout-land/filters_fragment_main.xml
+++ b/app/src/main/res/layout-land/filters_fragment_main.xml
@@ -111,7 +111,7 @@
                     android:id="@id/android:list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"></org.ecomap.android.app.ui.components.NonScrollableListView>
+                    android:layout_alignParentTop="true"/>
 
             </LinearLayout>
 
