--- a/app/src/main/res/layout/activity_view_photo.xml
+++ b/app/src/main/res/layout/activity_view_photo.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:theme="@style/ToolbarStyle"
         android:maxHeight="?attr/actionBarSize" />
 
     <FrameLayout
