--- a/app/src/main/res/layout/comment_photos_layout.xml
+++ b/app/src/main/res/layout/comment_photos_layout.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <org.ecomap.android.app.ui.components.NonScrollableListView
+        <org.ecomap.android.app.widget.NonScrollableListView
             android:id="@+id/nonScrollableListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
