--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -56,7 +56,7 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <org.ecomap.android.app.ui.components.EcoMapSlidingLayer
+    <org.ecomap.android.app.widget.EcoMapSlidingLayer
         xmlns:slidingLayer="http://schemas.android.com/apk/res-auto"
         android:id="@+id/show_problem_sliding_layer"
         android:layout_width="match_parent"
@@ -278,6 +278,6 @@
         </LinearLayout>
 
 
-    </org.ecomap.android.app.ui.components.EcoMapSlidingLayer>
+    </org.ecomap.android.app.widget.EcoMapSlidingLayer>
 
 </RelativeLayout>
