--- a/app/src/main/res/layout/comment_photos_layout.xml
+++ b/app/src/main/res/layout/comment_photos_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -12,24 +11,32 @@
         android:background="?attr/colorPrimary"
         android:maxHeight="?attr/actionBarSize" />
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
+        android:id="@+id/details_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:fillViewport="true"
+        android:measureAllChildren="true">
+
+        <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:id="@+id/nestedScrollView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <org.ecomap.android.app.widget.NonScrollableListView
-            android:id="@+id/nonScrollableListView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"/>
+            <org.ecomap.android.app.widget.NonScrollableListView
+                android:id="@+id/nonScrollableListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
 
         </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
+    <!--</android.support.v4.widget.NestedScrollView>-->
 
 </LinearLayout>
